--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -2953,7 +2953,7 @@ public:
 };
 ```
 
-查找操作的复杂度不超过树高，合并复杂度取决于查找；在一定范围内查找次数越多被压缩的路径越多复杂度越低
+查找操作的复杂度不超过树高(logn)，合并复杂度取决于查找；在一定范围内查找次数越多被压缩的路径越多复杂度越低
 
 ### 求幂集
 
@@ -3476,7 +3476,6 @@ void Graph<Tv, Te>::SCC(int v, int &clock, stack<int> &S)
 
 ```
 
-
 Kosaraju算法计算scc
 
 按顶点回溯顺序的逆序对原图的反向图进行BFS
@@ -3519,8 +3518,112 @@ void Graph<Tv, Te>::scc2()
 
 ### 优先级搜索(PFS)
 
+框架
 
+[优先级队列,基于二叉堆](/home/fengsc/Desktop/cpp/DataStructure/Quene/PrioQueen.h)
 
+```cpp
+template <typename Tv, typename Te>
+template <typename PU>
+void Graph<Tv, Te>::pfs(int s, PU prioUpdater)
+{
+    reset();
+    int v = s;
+    do
+    {
+        if (UNDISCOVERED == status(v))
+            PFS(v, prioUpdater);
+    } while (s != (v = (++v % n)));
+}
+template <typename Tv, typename Te>
+template <typename PU>
+void Graph<Tv, Te>::PFS(int v, PU prioUpdater, Graph<Tv, Te> &SPTree)
+{
+    //图中顶点初始优先级为INT_MAX
+    priority(v) = 0; //初始化源顶点
+    parent(v) = -1;
+    IndexMinPQ Q(n); //创建容量为n的下标优先队列
+    Q.enqueue(v, priority(v));
+    while (!Q.empty())
+    {
+        v = Q.dequeue();
+        for (int w = firstNbr(v); w > -1; w = nextNbr(v, w)) //更新在剩余集合中当前顶点邻居的优先级
+            if (status(w) == UNDISCOVERED)
+            {
+                prioUpdater(this, v, w);
+                if (Q.exists(w)) //更新队列
+                    Q.change(w, priority(w));
+                else
+                    Q.enqueue(w, priority(w));
+            }
+        status(v) = VISITED; //更新选中的新的顶点和相关的边
+        int prt = parent(v);
+        if (prt != -1) //排除源点
+        {
+            type(prt, v) = TREE;                          //标记原树在生成树对应的边
+            SPTree.insert(prt, v, weight(prt, v), (Te)1); //生成树和原图顶点的下标相同
+            SPTree.parent(v) = prt;
+        }
+    }
+}
+```
+
+前一个循环对于邻接矩阵复杂度是n^2,对于邻接表是n+e,后一层对于两者都是n^2,用优先级队列以上两项将可达到elogn和nlogn,合计为(n+e)logn,
+
+最小生成树算法
+
+Prim：
+
+```cpp
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::prim(int s, Graph<Tv, Te> &SPTree)
+{
+    reset();
+    auto primPU = [](Graph<Tv, Te> *g, int v, int w)
+    {
+        if (g->priority(w) > g->weight(v, w))
+        {
+            g->priority(w) = g->weight(v, w);
+            g->parent(w) = v;
+        }
+    };
+    SPTree.direct = this->direct;
+    for (int i = 0; i < this->n; i++) //初始化顶点
+        SPTree.insert(i);
+    PFS(s, primPU, SPTree);
+}
+```
+
+复杂度
+
+普通优先队列:时间：ElogE,空间:E
+
+下标优先队列:时间：ElogV,空间:V(主要优势)
+
+区别在于队列的状态，前者无效边会保留在队列，而后者会进行筛选，且判断是否已经存在与队列(堆)的语句复杂度为1
+
+Dilkstra算法，所得路径是最短路径
+
+```cpp
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::dijkstra(int s)
+{
+    reset();
+    auto DijkPU = [](Graph<Tv, Te> *g, int v, int w) //优先级比较函数
+    {
+        if (g->priority(w) > g->priority(v) + g->weight(v, w))
+        {
+            g->priority(w) = g->priority(v) + g->weight(v, w);
+            g->parent(w) = v;
+        }
+    };
+    PFS(s, DijkPU);
+}
+```
+
+复杂度同基于下标优先队列的prim算法，但前者不能保证得到最短路径，而后者则不能解决带负权边的情况，如果已知最小负权值可以通过将所有权值加至正来解决。
+
+prim算法每次添加的都是离生成树最近的，dilkstra每次添加的是离起点最近的
 
 
 
