--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -3621,7 +3621,7 @@ void Graph<Tv, Te>::dijkstra(int s)
 }
 ```
 
-复杂度同基于下标优先队列的prim算法，但前者不能保证得到最短路径，而后者则不能解决带负权边的情况，如果已知最小负权值可以通过将所有权值加至正来解决。
+复杂度同基于下标优先队列的prim算法，但前者不能保证得到最短路径，而后者求最短路径时不能解决带负权边的情况，如果已知最小负权值可以通过将所有权值加至正来解决。
 
 prim算法每次添加的都是离生成树最近的，dilkstra每次添加的是离起点最近的
 
